refactoring travis ci

--- a/travis.yml
+++ b/travis.yml
@@ -1,13 +1,15 @@
 language: node_js
-
 node_js:
   - 8.16.0
 
-deploy:
-  provider: npm
-  email: "hadimir22@gmail.com"
-  api_key: "562c512b-33ba-4dee-b7d0-3207fb7e9510"
-  github_token: $github_token
-  skip_cleanup: true
-  on:
-    branch: master
+script: echo "Running tests against $(node -v) ..."
+
+jobs:
+  include:
+    - stage: npm release
+      node_js: "8.16.0"
+      script: echo "Deploying to npm ..."
+      deploy:
+        provider: npm
+        api_key: $NPM_API_KEY
+        on: master
