--- a/travis.yml
+++ b/travis.yml
@@ -1,15 +1,13 @@
 language: node_js
+
 node_js:
   - 8.16.0
 
-script: echo "Running tests against $(node -v) ..."
-
-jobs:
-  include:
-    - stage: npm release
-      node_js: "8.16.0"
-      script: echo "Deploying to npm ..."
-      deploy:
-        provider: npm
-        api_key: $NPM_API_KEY
-        on: master
+deploy:
+  provider: npm
+  email: "hadimir22@gmail.com"
+  api_key: "$NPM_API_KEY"
+  github_token: $github_token
+  skip_cleanup: true
+  on:
+    branch: master
