--- a/travis.yml
+++ b/travis.yml
@@ -3,6 +3,9 @@ language: node_js
 node_js:
   - "8.16.0"
 
+before_script:
+  - npm install -g npm@'>=3'
+
 deploy:
   provider: npm
   email: "hadimir22@gmail.com"
