--- a/.travis.yml
+++ b/.travis.yml
@@ -3,13 +3,10 @@ language: node_js
 node_js:
   - "8.16.0"
 
-before_script:
-  - npm install -g npm@'>=3'
-
 deploy:
   provider: npm
   email: "hadimir22@gmail.com"
   api_key: "$NPM_API_KEY"
   skip_cleanup: true
   on:
-    tags: true
+    branch: master
